updated saying enem alehu

--- a/html/anims.html
+++ b/html/anims.html
@@ -14,6 +14,7 @@ pageTracker._trackPageview();
 </script>
 
   <body>
+    <h6>hi enem alehu </h6>
     <h1><a href="index.html">MathMap</a> Animation Examples</h1>
 
     These are examples of the animation capabilities of MathMap. The
